// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-button example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <button
    className=""
    data-test-id={undefined}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "marginRight": 10,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "pointerEvents": "none",
        }
      }
    >
      Label
    </span>
  </button>
  <button
    className=""
    data-test-id={undefined}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "alignItems": "center",
        "background": "none",
        "border": "none",
        "borderColor": "rgba(33,36,44,0.50)",
        "borderRadius": 4,
        "borderStyle": "solid",
        "borderWidth": 1,
        "boxSizing": "border-box",
        "color": "#1865f2",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "marginRight": 10,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "pointerEvents": "none",
        }
      }
    >
      Label
    </span>
  </button>
  <button
    className=""
    data-test-id={undefined}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "alignItems": "center",
        "background": "none",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#1865f2",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "marginRight": 10,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 4,
        "paddingRight": 4,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "pointerEvents": "none",
        }
      }
    >
      Label
    </span>
  </button>
  <button
    className=""
    data-test-id={undefined}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "alignItems": "center",
        "background": "#1865f2",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "#ffffff",
        "cursor": "pointer",
        "display": "inline-flex",
        "height": 32,
        "justifyContent": "center",
        "marginRight": 10,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
      }
    }
    tabIndex={0}
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato",
          "fontSize": 14,
          "fontWeight": "bold",
          "lineHeight": "18px",
          "pointerEvents": "none",
        }
      }
    >
      Label
    </span>
  </button>
</div>
`;

exports[`wonder-blocks-button example 2 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#button-1"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchCancel={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  style={
    Object {
      "alignItems": "center",
      "background": "#1865f2",
      "border": "none",
      "borderRadius": 4,
      "boxSizing": "border-box",
      "color": "#ffffff",
      "cursor": "pointer",
      "display": "inline-flex",
      "height": 40,
      "justifyContent": "center",
      "outline": "none",
      "paddingBottom": 0,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 0,
      "position": "relative",
      "textDecoration": "none",
    }
  }
  tabIndex={0}
>
  <span
    className=""
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "display": "block",
        "fontFamily": "Lato",
        "fontSize": 16,
        "fontWeight": "bold",
        "lineHeight": "20px",
        "pointerEvents": "none",
      }
    }
  >
    Label
  </span>
</a>
`;

exports[`wonder-blocks-button example 3 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "row",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <button
    className=""
    data-test-id={undefined}
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "alignItems": "center",
        "background": "rgba(33,36,44,0.32)",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "rgba(255,255,255,0.64)",
        "cursor": "auto",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "marginRight": 10,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
      }
    }
    tabIndex={-1}
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "pointerEvents": "none",
        }
      }
    >
      Label
    </span>
  </button>
  <a
    className=""
    data-test-id={undefined}
    disabled={true}
    href="https://khanacademy.org"
    onBlur={[Function]}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "alignItems": "center",
        "background": "rgba(33,36,44,0.32)",
        "border": "none",
        "borderRadius": 4,
        "boxSizing": "border-box",
        "color": "rgba(255,255,255,0.64)",
        "cursor": "auto",
        "display": "inline-flex",
        "height": 40,
        "justifyContent": "center",
        "marginRight": 10,
        "outline": "none",
        "paddingBottom": 0,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 0,
        "position": "relative",
        "textDecoration": "none",
      }
    }
    tabIndex={-1}
  >
    <span
      className=""
      style={
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "display": "block",
          "fontFamily": "Lato",
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": "20px",
          "pointerEvents": "none",
        }
      }
    >
      Href button
    </span>
  </a>
</div>
`;

exports[`wonder-blocks-button example 4 1`] = `
<table>
  <thead>
    <tr>
      <th
        style={
          Object {
            "minWidth": "250px",
          }
        }
      >
        Styles
      </th>
      <th
        style={
          Object {
            "width": "100%",
          }
        }
      >
        Buttons
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        width: '200px'
      </td>
      <td>
        <button
          className=""
          data-test-id={undefined}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "background": "#1865f2",
              "border": "none",
              "borderRadius": 4,
              "boxSizing": "border-box",
              "color": "#ffffff",
              "cursor": "pointer",
              "display": "inline-flex",
              "height": 40,
              "justifyContent": "center",
              "outline": "none",
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "position": "relative",
              "textDecoration": "none",
              "width": 200,
            }
          }
          tabIndex={0}
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": "bold",
                "lineHeight": "20px",
                "pointerEvents": "none",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr>
      <td>
        width: '75%'
      </td>
      <td>
        <button
          className=""
          data-test-id={undefined}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "background": "#1865f2",
              "border": "none",
              "borderRadius": 4,
              "boxSizing": "border-box",
              "color": "#ffffff",
              "cursor": "pointer",
              "display": "inline-flex",
              "height": 40,
              "justifyContent": "center",
              "outline": "none",
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "position": "relative",
              "textDecoration": "none",
              "width": "75%",
            }
          }
          tabIndex={0}
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": "bold",
                "lineHeight": "20px",
                "pointerEvents": "none",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr>
      <td>
        display: 'block', margin: '0 auto'
      </td>
      <td>
        <button
          className=""
          data-test-id={undefined}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "alignItems": "center",
              "background": "#1865f2",
              "border": "none",
              "borderRadius": 4,
              "boxSizing": "border-box",
              "color": "#ffffff",
              "cursor": "pointer",
              "display": "block",
              "height": 40,
              "justifyContent": "center",
              "margin": "0 auto",
              "outline": "none",
              "paddingBottom": 0,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 0,
              "position": "relative",
              "textDecoration": "none",
            }
          }
          tabIndex={0}
        >
          <span
            className=""
            style={
              Object {
                "MozOsxFontSmoothing": "grayscale",
                "WebkitFontSmoothing": "antialiased",
                "display": "block",
                "fontFamily": "Lato",
                "fontSize": 16,
                "fontWeight": "bold",
                "lineHeight": "20px",
                "pointerEvents": "none",
              }
            }
          >
            Label
          </span>
        </button>
      </td>
    </tr>
    <tr>
      <td>
        flexGrow: 1
      </td>
      <td>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className=""
            data-test-id={undefined}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "alignItems": "center",
                "background": "#1865f2",
                "border": "none",
                "borderRadius": 4,
                "boxSizing": "border-box",
                "color": "#ffffff",
                "cursor": "pointer",
                "display": "inline-flex",
                "flexGrow": 1,
                "height": 40,
                "justifyContent": "center",
                "outline": "none",
                "paddingBottom": 0,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 0,
                "position": "relative",
                "textDecoration": "none",
              }
            }
            tabIndex={0}
          >
            <span
              className=""
              style={
                Object {
                  "MozOsxFontSmoothing": "grayscale",
                  "WebkitFontSmoothing": "antialiased",
                  "display": "block",
                  "fontFamily": "Lato",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "lineHeight": "20px",
                  "pointerEvents": "none",
                }
              }
            >
              Label
            </span>
          </button>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        flexShrink: 2, width: '300px'
      </td>
      <td>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className=""
            data-test-id={undefined}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "alignItems": "center",
                "background": "#1865f2",
                "border": "none",
                "borderRadius": 4,
                "boxSizing": "border-box",
                "color": "#ffffff",
                "cursor": "pointer",
                "display": "inline-flex",
                "flexShrink": 2,
                "height": 40,
                "justifyContent": "center",
                "marginRight": 10,
                "outline": "none",
                "paddingBottom": 0,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 0,
                "position": "relative",
                "textDecoration": "none",
                "width": "300px",
              }
            }
            tabIndex={0}
          >
            <span
              className=""
              style={
                Object {
                  "MozOsxFontSmoothing": "grayscale",
                  "WebkitFontSmoothing": "antialiased",
                  "display": "block",
                  "fontFamily": "Lato",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "lineHeight": "20px",
                  "pointerEvents": "none",
                }
              }
            >
              Label
            </span>
          </button>
          <div
            onClick={[Function]}
            style={
              Object {
                "background": "#eee",
                "lineHeight": "40px",
                "textAlign": "center",
                "width": "100%",
              }
            }
          >
            Not a button
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        alignSelf: 'flex-end'
      </td>
      <td>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <button
            className=""
            data-test-id={undefined}
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "flex-end",
                "background": "#1865f2",
                "border": "none",
                "borderRadius": 4,
                "boxSizing": "border-box",
                "color": "#ffffff",
                "cursor": "pointer",
                "display": "inline-flex",
                "height": 40,
                "justifyContent": "center",
                "marginRight": 10,
                "outline": "none",
                "paddingBottom": 0,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 0,
                "position": "relative",
                "textDecoration": "none",
              }
            }
            tabIndex={0}
          >
            <span
              className=""
              style={
                Object {
                  "MozOsxFontSmoothing": "grayscale",
                  "WebkitFontSmoothing": "antialiased",
                  "display": "block",
                  "fontFamily": "Lato",
                  "fontSize": 16,
                  "fontWeight": "bold",
                  "lineHeight": "20px",
                  "pointerEvents": "none",
                }
              }
            >
              Label
            </span>
          </button>
          <div
            onClick={[Function]}
            style={
              Object {
                "background": "#eee",
                "height": "100px",
                "lineHeight": "100px",
                "padding": "0px 4px",
                "textAlign": "center",
              }
            }
          >
            Not a button
          </div>
        </div>
      </td>
    </tr>
    <tr>
      <td>
        justifySelf: 'flex-end'
      </td>
      <td>
        <div
          style={
            Object {
              "display": "flex",
            }
          }
        >
          <div
            style={
              Object {
                "display": "grid",
                "width": "100%",
              }
            }
          >
            <button
              className=""
              data-test-id={undefined}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchStart={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "background": "#1865f2",
                  "border": "none",
                  "borderRadius": 4,
                  "boxSizing": "border-box",
                  "color": "#ffffff",
                  "cursor": "pointer",
                  "display": "inline-flex",
                  "height": 40,
                  "justifyContent": "center",
                  "justifySelf": "flex-end",
                  "outline": "none",
                  "paddingBottom": 0,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 0,
                  "position": "relative",
                  "textDecoration": "none",
                }
              }
              tabIndex={0}
            >
              <span
                className=""
                style={
                  Object {
                    "MozOsxFontSmoothing": "grayscale",
                    "WebkitFontSmoothing": "antialiased",
                    "display": "block",
                    "fontFamily": "Lato",
                    "fontSize": 16,
                    "fontWeight": "bold",
                    "lineHeight": "20px",
                    "pointerEvents": "none",
                  }
                }
              >
                Label
              </span>
            </button>
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
